# chat_gpt_api_cpp

./: CMakeLists.txt
lib/jsoncpp/x64/lib/: jsoncpp.lib  jsoncpp_static.lib
lib/jsoncpp/x64/lib/pkgconfig/: jsoncpp.pc
lib/libcurl/x64/lib/cmake/CURL/: CURLConfigVersion.cmake  CURLTargets.cmake
lib/libcurl/x64/lib/pkgconfig/: libcurl.pc
src/: CMakeLists.txt  main.cpp
